--- a/article/状态管理/前端代码组织.md
+++ b/article/状态管理/前端代码组织.md
@@ -116,9 +116,7 @@ MVC是UI程序设计的最佳实践，它将视图和业务逻辑层解耦，只
 
 对于第一点，不同的工具有不同的方案，如redux是用状态机的思想管理操作后状态变化的实现；mobx则是直接改变状态，更灵活方便。
 
-值得注意的是，状态管理工具并不能完全用来实现一个MC层，因为状态管理工具只提供数据的变化监听，其发布-订阅其实只是监听数据变化的实现，并不能监听常规事件。
-
-还有一点需要注意的是，如果使用父子事件通信，就没有办法做到视图和逻辑的完全分离。原因很简单，如果一个父组件向子组件传递事件，只能调用子组件的成员方法，成员方法一定是业务逻辑的实现，那么子组件的视图和业务逻辑就耦合在一起了。
+值得注意的是，状态管理工具并不能完全用来实现一个controller层，因为状态管理工具只提供数据的变化监听，其发布-订阅其实只是监听数据变化的实现，并不能监听常规事件。
 
 #### 4. 代码质量的指标
 
