modify自适应方案

--- a/article/css/自适应方案.md
+++ b/article/css/自适应方案.md
@@ -135,8 +135,7 @@
 
 从代码中我们可以看出来，flexible.js只是做了两个操作
 
-1. 动态设置name为viewport的meta标签的content属性的值的放缩比例（```        metaEl.setAttribute('content', 'initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');
-```）
+1. 动态设置name为viewport的meta标签的content属性的值的放缩比例（```metaEl.setAttribute('content', 'initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');```）
 2. 设置html的font-size属性（```docEl.style.fontSize = rem + 'px';```）
 
 其他的代码都是为了这两个操作所做的一些计算工作，和一些优化的工作。
