--- a/article/算法/数据结构与算法课程笔记/2.数据结构/链表.md
+++ b/article/算法/数据结构与算法课程笔记/2.数据结构/链表.md
@@ -47,3 +47,11 @@
 	2. 若不能找到
 		- 若链表已满，则删除尾部结点，将数据插入到链表头部
 		- 若链表未满，则直接将数据插入到链表头部
+
+#### 几个链表的操作
+
+- 单链表反转
+- 链表中环的检测
+- 两个有序链表的合并
+- 删除链表倒数第n个结点
+- 求链表的中间结点
