--- a/article/react/受控组件和非受控组件.md
+++ b/article/react/受控组件和非受控组件.md
@@ -6,10 +6,7 @@
 
 React组件可以控制一个表单元素的状态（通过表单元素的value属性），React组件还可以通过这个表单元素的状态更改回调来获取这个表单元素的状态。这个表单元素就是一个“受控组件”。
 
-“受控”体现在两个方面
-
-1. React组件可以控制这个表单元素的取值（value属性）
-2. React组件可以获取这个表单元素的取值（通过状态改变回调，如onChange）
+“受控”体现在：React组件可以通过自己的state控制这个表单元素的值（value属性）
 
 【思考】只要是这种形式的父子组件关系，都可以成为受控组件。不限于表单元素。那么如何实现一个受控组件？
 
