--- a/article/react/生命周期钩子的执行过程.md
+++ b/article/react/生命周期钩子的执行过程.md
@@ -1,4 +1,176 @@
-## 生命周期钩子的执行过程（未完成）
+## 生命周期钩子的执行过程
 
-- 如何实现这样的需求：子组件的展示依赖父组件传过来的一个属性“visible”。并且子组件本身也可以控制自己的展示隐藏。即如何实现一个受控组件。
+#### 1. React生命周期钩子
+
+**旧的生命周期钩子（React16以前的版本）**
+
+- 挂载阶段
+	
+	1. constructor()
+	2. getDefaultProps()
+	3. getInitialState()
+	4. componentWillMount()
+	5. render()
+	6. componentDidMount()
+
+- 更新阶段
+	
+	1. componentWillReceiveProps(nextProps)
+	2. shouldComponentUpdate(nextProps, nextState)
+	3. componentWillUpdate(nextProps, nextState)
+	4. render()
+	5. componentDidUpdate()
+
+- 卸载阶段
+	1. componentWillUnmount()
+
+**新的生命周期钩子**
+
+- 挂载阶段
+
+	1. constructor()
+	2. static getDerivedStateFromProps(nextProps, currentState)
+	3. render()
+	4. componentDidMount()
+
+- 更新阶段
+	
+	1. static getDerivedStateFromProps(nextProps, currentState)
+	2. shouldComponentUpdate()
+	3. render()
+	4. getSnapshotBeforeUpdate(prevProps, prevState)
+	5. componentDidUpdate(prevProps, prevState, snapShot)
+
+- 卸载阶段
+	1. componentWillUnmount()
+
+- 错误处理
+
+	1. static getDerivedStateFromError()
+	2. componentDidCatch()
+
+#### 2. 开发中生命周期钩子实践
+
+React16改变了组件生命周期钩子的API。
+
+改变生命周期钩子API的原因是，之前的API让开发者不是很容易理解，不清楚这些生命周期钩子函数应该在什么场景下使用最合适。容易让开发者产生疑惑和乱用，导致一些反模式。
+
+新的生命周期钩子抛弃了几个老的、容易被误解的生命周期钩子，也新增了几个生命周期钩子。
+
+新的这套生命周期钩子基于以下几个原则
+
+1. 副作用和视图渲染通常不会相互影响
+
+	所以副作用都可以在componentDidMount、componentDidUpdate中进行。而无需在DOM渲染之前处理（比如废弃掉的componentWillReceiveProps）
+	
+	只有一种副作用可能会与视图渲染有关系，那就是DOM操作，由于componentDidMount()和componentDidUpdate()方法都是在DOM修改后调用的，如果副作用的执行和DOM渲染之前的状态有关，就需要我们在渲染DOM之前就保存好DOM的一些信息和组件的信息。getSnapshotBeforeUpdate()方法就是用来在渲染DOM之前保存DOM信息和组件信息用的，它返回的结果会直接传入componentDidUpdate()中。
+	
+2. 派生state（即根据props生成state）和props应该是一个固定的关系
+
+	之前componentWillReceiveProps常常被用来接受父组件传过来的属性并赋值给state。派生state常常会导致一些反模式，从而引发一些bug。如果父组件传来的props会影响到子组件，可能有两种情况，一种是props会导致子组件的**副作用**，这在componentDidUpdate()或componentDidMount()中可以实现。另一种是**渲染**，通常props直接映射到render方法中的视图即可，如果渲染方面还有更多的需求，那就是props与state有一定的关联关系了。static getDerivedStateFromProps()就是用来定义这种关系的。
+	
+	有了这个生命周期钩子，状态转换更加规范，就可以让开发者从状态转换的角度考虑如何实现父子组件的关系。这样可以避免很多乱用生命周期钩子而产生的不必要的问题。
+	
+	如果state的初始化依赖于props，可以在constructor中初始化，否则应该在class field中初始化。
+
+3. 组件行为只包括两个要素：副作用和渲染
+
+	上述第一点给出了副作用的解决方案；第二点给出了渲染的解决方案。因此其他的生命周期钩子都是多余的。所以新的生命周期钩子中移除了componentWillReceiveProps()（子组件接收到props时候，如果需要改变渲染逻辑，在```static getDerivedStateFromProps()```中操作state即可；如果需要进行副作用操作，在```componentDidUpdate()```或者```componentDidMount()```中执行即可。不需再需要```componentWillReceiveProps()```）、componentWillUpdate()（正如前面提到的，副作用和渲染互不影响，因此before update和after update中进行副作用的操作都一样，而渲染逻辑不需要在这种钩子中处理，在```static getDerivedStateFromProps()```中处理即可。不再需要这个钩子。）、componentWillMount()（理由同componentWillUpdate）。
+	
+另外，生命周期钩子也分为不同的阶段，挂载阶段、更新阶段和卸载阶段。挂载阶段用于初始化相关的操作（初始化一些状态或者拉取数据、监听事件、设定ref等）；更新阶段用于处理组件变更逻辑，即props变化后，应该有哪些 1. 渲染变更或者 2. 副作用的产生；卸载阶段用于清理工作（复位一些状态、注销监听、停掉定时器等）
+
+总结一下，当我们开发一个React组件时候
+
+1. 首先要确定组件在不同阶段：挂载阶段、更新阶段、卸载阶段应该做哪些事情
+2. 然后重点考虑组件在更新阶段的逻辑。组件状态都收到哪些因素的影响（用户交互、父组件props更新）接收到新的props后组件状态应该如何更新，props变化后是否需要有副作用操作。
+
+然后就可以进行具体的开发了。
+
+#### 3. 案例
+
+- 受控组件
+
+	如何实现这样的需求：子组件的展示依赖父组件传过来的一个属性“visible”。并且子组件本身也可以控制自己的展示隐藏。即如何实现一个受控组件。
+	
+	```
+		// Child组件支持外部属性“visible”控制显隐，自己也可以控制显隐
+
+		class Child extends React.Component {
+	
+	    constructor({visible}) {
+	        super();
+	        this.state = {visible};
+	    }
+	
+	    static getDerivedStateFromProps(nextProps, currentState) {
+	        const {visible: nextVisible} = nextProps;
+	        const {visible: currentVisible} = currentState;
+	        return nextVisible !== currentState
+	            ? {visible: nextVisible}
+	            : null;
+	    }
+	
+	    onSwitcherClick = () => {
+	        const {onVisibleChange} = this.props;
+	        this.setState(({visible}) => {
+	            onVisibleChange(visible);
+	            reuturn {visible: !visible};
+	        });
+	    };
+	
+	    render() {
+	        const {visible} = this.state;
+	        const {children} = this.props;
+	        return visible
+	            ? (
+	                <div className="container">
+	                    <button
+	                        onClick={this.onSwitcherClick}
+	                    >
+	                        点击
+	                    </button>
+	                    <div className="body">
+	                        {children}
+	                    </div>
+	                </div>
+	            )
+	            null
+	    }
+	}
+	
+	class Parent extends React.Component {
+	
+	    state = {
+	        visible: false
+	    };
+	
+	    onVisibleChange = visible => {
+	        this.setState({visible});
+	    };
+	
+	    onButtonClick = () => {
+	        this.setState(({visible}) => ({visible: !visible}));
+	    };
+	
+	    render() {
+	        return (
+	            <div className="parent-container">
+	                <button
+	                    onClick={this.onButtonClick}
+	                >
+	                    点击
+	                </button>
+	                <Child
+	                    visible={this.state.visible}
+	                    onVisibleChange={this.onVisibleChange}
+	                />
+	            </div>
+	        );
+	    }
+	}
+
+	```
+
 - 如何实现这样的需求：父组件赋予子组件一个初始值，而不去控制它后续更新
+
+	只要给子组件传入一个"defaultVisible"或者"initialVisible"。子组件用它来初始化自己的state（在constructor中进行初始化）
