--- a/article/react/生命周期钩子的执行过程.md
+++ b/article/react/生命周期钩子的执行过程.md
@@ -86,6 +86,8 @@ React16改变了组件生命周期钩子的API。
 
 然后就可以进行具体的开发了。
 
+还有一点值得说明的是，新版的声明周期钩子删除的几个都在更新dom之前。因为React引入Fiber架构之后，挂载DOM之前的阶段是会被分片执行的，即如果当前时间片没有执行完，会等到浏览器线程空闲时候再继续执行，因此生命周期钩子可能会执行多次。这也是移除这些生命周期钩子的原因。
+
 #### 3. 案例
 
 - 受控组件
