--- a/article/算法/数据结构与算法课程笔记/3.算法/算法思想.md
+++ b/article/算法/数据结构与算法课程笔记/3.算法/算法思想.md
@@ -47,6 +47,26 @@
 
 ## 2. 分治算法
 
+分治算法能解决的问题，需要满足下面几个条件
+
+1. 原问题与分解的子问题有相同模式
+2. 原问题分解成的子问题可以独立求解，子问题之间没有相关性
+3. 具有分解终止条件
+4. 可以将子问题合并成原问题，并且合并的复杂度不能太高
+
+分治算法实例
+
+1. 求序列的逆序对
+	
+	类比归并排序算法
+2. 二维平面n个点中距离最近的点对
+
+	1. 按横坐标分治
+	2. 先分别求左右两个区间内最小距离
+	3. 再求左右两个区间之间最小距离，使用第二步计算出的距离进行限制
+3. mapreduce
+4. 外排序
+
 ## 3. 回溯算法
 
 ## 4. 动态规划
