--- a/article/webpack/玩转webpack笔记/3.webpack进阶用法(16).md
+++ b/article/webpack/玩转webpack笔记/3.webpack进阶用法(16).md
@@ -228,7 +228,7 @@ sourcemap关键字如下
 	
 	eval包裹每个代码块时候，会在后面增加"sourceURL"（和sourcemap里的"sourceMappingURL"不同）用来定位到原文件。
 	
-	eval模式优势在于，它是将每个模块单独eval执行，因此如果配合sourcemap使用，就可以单独缓存每个模块的sourcemap，这样就可以在重新构建时候实现增量修改sourcemap，节省时间。如果不使用eval模式，就是一个文件（chunk）对应一个sourcemap，重新构建时候需要将整个chunk的sourcemap重新生成，更耗费时间。
+	eval模式优势在于，它是将每个模块单独eval执行，因此如果配合source-map使用，就可以单独缓存每个模块的sourcemap，这样就可以在重新构建时候实现增量修改sourcemap，节省时间。如果不使用eval模式，就是一个文件（chunk）对应一个sourcemap，重新构建时候需要将整个chunk的sourcemap重新生成，更耗费时间。
 	
 	因此eval模式的优势就在于重新构建的速度更快
 - source-map
@@ -298,9 +298,270 @@ nosources-source-map | -- | -- | yes | 无源代码内容
 - 测试环境使用"eval-cheap-module-source-map"
 
 	原因和本地开发环境一样，如果介意内联sourcemap导致文件过大，可以配置"cheap-module-source-map"
-- 线上尽量不适用sourcemap，防止业务逻辑暴露
+- 线上尽量不使用sourcemap，防止业务逻辑暴露
 
 线上debug
 
 1. 将sourcemap上传到线上错误监控系统中，这样代码报错就可以定位到源码的相应位置
 2. 将sourcemap上传到公司内网
+
+## 28. 提取页面公共资源
+
+提取页面公共的资源有两种场景
+
+1. 一些不常更新的第三方库，可以从项目依赖中提取出来，将打包好的库文件放到cdn上，通过script标签引入。这样可以提高构建速度。并且充分利用浏览器强缓存，提高发版后页面加载速度。
+2. 一些不常改变的业务代码，也可以拆分出来单独生成chunk，这样就可以充分利用浏览器强缓存，提高发版后页面加载速度。
+
+
+对于第一种需求，可以使用html-webpack-externals-plugin插件来实现
+
+它实际是动态修改webpack配置，并依赖了其它插件的能力，可以做到：
+
+1. 将指定的第三方库不打包
+2. 将指定的第三方库打包后文件拷贝到指定目录
+3. 自动内联到html的标签上（script或者link）
+
+对于第二种需求，可以通过webpack4内置的optimization.splitChunks字段实现
+
+## 29. Tree Shaking的使用和原理分析
+
+tree shaking（摇树优化）是webpack从版本2开始支持的功能
+
+tree shaking功能可以不将未用到的代码打到bundle中，从而优化代码体积
+
+使用
+
+webpack默认支持，在.babelrc中设置modules: false即可
+mode === 'production'时候，默认开启
+
+要求
+
+必须是es6语法，cjs不支持
+
+因为ES6模块规范要求import语句处于模块顶层，因此不能动态导入模块，因此可以通过静态分析找出未用到的代码
+
+说明
+
+tree shaking支持以下几种情况的冗余代码擦除
+
+1. 模块引入，但未使用
+	
+	这个模块将不会被打包到bundle中
+2. 模块中部分代码引入并使用
+
+	模块中使用到的部分被打包，其他部分不被打包
+3. DCE（dead code elimination）
+	
+	1. 永远不会执行到的代码将被擦除
+
+		```
+		if (false) {
+			func();
+		}
+		```
+	2. 代码执行结果不会被用到
+		
+		```
+		// 变量a后面没有被用到
+		const a = 'a';
+		```
+
+tree shaking在uglify阶段删除无用代码
+
+## 30. scope hoisting使用和原理分析
+
+#### 0. 背景，webpack打包机制
+
+- webpack根据以入口为初始节点的有向依赖图进行模块打包
+- webpack会将es6模块的import语句转换成`__webpack_require__`，这是webpack运行时代码，用来管理模块依赖
+- 每个模块以一个id标识，id是个自增的数字
+- 每个模块打包后是一个匿名闭包
+- 通过`__webpack_require__(0)`启动程序
+
+```
+(function (modules) {
+	var installedModules = {};
+	
+	function __webpack_require__(moduleId) {
+		if (installedModules[moduelId]) {
+			return installedModules[mouduleId].exports;
+		}
+		var module = installedModules[moduleId] = {
+			i: moduleId,
+			l: false,
+			exports: {}
+		};
+		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
+		module.l = true;
+		return module.exports;
+	}
+	
+	__webpack_require__(0);
+})([
+	// 0 module
+	(function (module, __webpack_exports__, __webpack_require__) {
+		// ...
+	}),
+	// 1 module
+	(function (module, __webpack_exports__, __webpack_require__) {
+		// ...
+	}),
+	// 2 module
+	(function (module, __webpack_exports__, __webpack_require__) {
+		// ...
+	})
+]);
+```
+
+#### 1. 问题
+
+1. 大量函数闭包包裹代码，导致代码体积增大（模块越多越明显）
+2. 代码运行时创建的函数作用域多，内存开销大
+
+#### 2. scope hoisting原理
+
+1. 将所有代码按照引用顺序放在一个函数作用域中
+2. 适当重命名一些变量，以防止变量名冲突
+
+#### 3. scope hoisting使用
+
+webpack mode === 'production'默认开启
+
+必须是ES6模块规范，不能是cjs
+
+## 31. 代码分割和动态import
+
+#### 1. 适用场景
+
+1. 抽离相同代码到一个共享块
+2. 脚本懒加载，初始下载的代码更小
+
+#### 2. js懒加载的方式
+
+1. CommonJs: require.ensure
+2. ES6：动态import（目前还没有原生支持，需要babel转换）
+
+动态import 语句返回一个promise，因此我们可以把import语句放在一个函数中，需要的时候调用，会异步加载模块了
+
+动态import语句中路径可以是一个变量，这样就可以在运行时确定需要加载哪个模块了
+
+## 32. 在webpack中使用ESLint
+
+【省略】
+
+## 33. webpack打包库和组件
+
+webpack支持打包库和组件
+
+打包库时候，只需要配置output的相关字段即可
+
+```
+module.exports = {
+	mode: 'production',
+	entry: {
+		'large-number': './src/index.js',
+		'large-number.min': './src/index.js'
+	},
+	output: {
+		filename: '[name].js', // 库文件打包不用hash命名输出文件
+		library: 'largeNumber', // 导出模块名（global模式下会挂载到window上，如果使用npm导入改包，模块名是package.json中的name字段）
+		libraryExport: 'default', // 可以直接获取模块，而不需要通过"largeNumber.default"来访问
+		libraryTarget: 'umd' // 兼容各种模块规范
+	}
+};
+```
+
+可以配置打包后的库的压缩策略，打包两个文件，一个不压缩，用于开发环境调试，另一个用于生产环境，需要压缩
+
+```
+module.exports = {
+	mode: 'production',
+	entry: {
+		'large-number': './src/index.js',
+		'large-number.min': './src/index.js'
+	},
+	output: {
+		filename: '[name].js', // 库文件打包不用hash命名输出文件
+		library: 'largeNumber', // 导出模块名（global模式下会挂载到window上，如果使用npm导入改包，模块名是package.json中的name字段）
+		libraryExport: 'default', // 可以直接获取模块，而不需要通过"largeNumber.default"来访问
+		libraryTarget: 'umd' // 兼容各种模块规范
+	},
+	optimization: {
+		minimize: true,
+		minimizer: [
+			new TerserPlugin({
+				include: /\.min\.js$/ // 仅对.min.js后缀chunk压缩
+			})
+		]
+	}
+};
+
+```
+
+terser-webpack-plugin插件用于压缩代码，相对于uglify，它可以解析es6
+
+实际开发中，我们应该让生产环境提供压缩代码，开发环境提供非压缩的代码。实现方式如下
+
+1. package.json的main字段为index.js
+2. index.js中判断
+
+	```
+	if (process.env.NODE_ENV === 'production') {
+		module.exports = require('./dist/large-number.min.js');
+	}
+	else {
+		module.exports = require('./dist/large-number.js');
+	}
+	```
+打包库的操作步骤
+
+1. 执行打包
+2. npm publish
+
+## 34. webpack实现SSR打包（一）
+
+【省略】
+
+## 35. webpack实现SSR打包（二）
+
+【省略】
+
+## 36.优化构建时命令行的显示日志
+
+1. webpack配置中stats字段配置成'error-only'
+2. 使用friendly-errors-webpack-plugin
+
+## 37. 构建异常和中断处理
+
+#### 0. 背景
+
+webpack每次构建完成后，需要让CI/CD的pipline或者发布系统知道当前构建状态
+
+webpack4会通过每次构建完成后输入```echo $?```来获取错误码
+
+webpack4之前的版本构建失败不会抛出错误码
+
+#### 1. 构建异常和中断处理
+
+webpack4以前版本，处理构建异常和中断，通过Nodejs中的process.exit实现
+
+```
+plugins: [
+	function () {
+		this.hooks.done.tap(
+			'done',
+			stats =>  {
+				if (stats.compilation.errors
+					&& stats.compilation.errors.length
+					&& process.argv.indexOf('--watch') === -1
+				) {
+					console.log('build error');
+					process.exit(1);
+				}
+			}
+		);
+	}
+]
+```
+
+在webpack4以后，也可以通过这个插件进行上报等操作
