--- a/article/算法/数据结构与算法课程笔记/3.算法/算法思想.md
+++ b/article/算法/数据结构与算法课程笔记/3.算法/算法思想.md
@@ -69,4 +69,26 @@
 
 ## 3. 回溯算法
 
+回溯算法很多时候应用在“搜索”这类问题上，即在一组可能的解中，搜索满足期望的解
+
+回溯的处理思想，有点类似枚举搜索。我们枚举所有的解，找到满足期望的解。为了有规律地枚举所有可能的解，避免遗漏和重复，我们把问题求解的过程分为多个阶段。每个阶段面临多个选择，随意选择一个，发现其不符合期望时候，再回退到上一个选择，重新搜索。
+
+回溯算法很适合用递归实现
+
+常见问题
+
+1. 深度优先搜索
+2. 八皇后
+3. 0-1背包问题
+4. 图的着色
+5. 旅行商问题
+6. 数独
+7. 全排列
+8. 正则表达式匹配
+
+【思考】
+
+回溯算法实际就是暴力穷举法（当然可以在回溯基础上做一些剪枝优化），只不过回溯算法规定了穷举的具体实现步骤。
+
 ## 4. 动态规划
+
