--- a/article/webpack/玩转webpack笔记/5.webpack构建速度和体积优化策略(12).md
+++ b/article/webpack/玩转webpack笔记/5.webpack构建速度和体积优化策略(12).md
@@ -313,6 +313,8 @@ polyfill的方案
 
 	 @babel/runtime实现polyfill的功能，它分析代码，然后添加相关的polyfill，即实现了polyfill的按需加载。它和上述两种方法的区别是，它在添加polyfill代码时候，不会污染全局变量，而是定义局部方法来实现polyfill。**因为这个特点，它更适合用在第三方库中，而上面两种适合用在业务代码项目中**。
 	 
+	 其缺点在于不支持实例方法的polyfill，如`arr.includes(1);`。
+	 
 	 由于 @babel/runtime也是使用内联代码实现polyfill，因此可能多个文件中会内联相同的工具方法。@babel/plugin-transform-runtime用来解决这个问题，它提取公共的工具方法，每个文件使用时候引入相关的工具方法，这样减少的代码体积。
 	 
 4. polyfill-service
